# web_store

./: .gitignore  LICENSE  README.MD  README.md  pyproject.toml
carts/: admin.py  models.py  urls.py  utils.py  views.py
carts/migrations/: 0001_initial.py  0002_cart_products.py
carts/templates/carts/: add.html  cart.html
carts/templates/carts/snippets/: add.html  remove.html
carts/templatetags/: cart_extras.py
categories/: admin.py  models.py
categories/migrations/: 0001_initial.py  0002_category_products.py  0003_alter_category_options.py
facilito_store/: asgi.py  forms.py  settings.py  urls.py  views.py  wsgi.py
orders/: admin.py  apps.py  models.py  signals.py  urls.py  utils.py  views.py
orders/migrations/: 0001_initial.py  0002_order_order_id.py
orders/templates/orders/: order.html
orders/templates/orders/snippets/: product.html  resume.html
products/: admin.py  models.py  signals.py  urls.py  views.py
products/fixtures/: products.json
products/migrations/: 0001_initial.py  0002_product_slug.py  0003_product_image.py
products/templates/products/: product.html  search.html
products/templates/snippets/: list.html  product.html  search.html
products/templatetags/: product_extras.py
static/js/: main.js
templates/: base.html  index.html
templates/users/: login.html  messages.html  navbar.html  register.html
users/: admin.py  models.py
users/fixtures/: users.json
users/migrations/: 0001_initial.py
