[tool.poetry]
name = "codigo facilito"
version = "0.1.0"
description = ""
authors = ["purohr <diego683@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.5"
python-dotenv = "^0.20.0"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
mypy = "^0.961"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
